data/derived/comb/progs/unify/prog0969.ml.out
Characters 119-129:
  | (w, [])   -> (w, (z/10)::(z mod 10))
                             ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
